# e-commerce-backend-api

./: .flake8  .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/core/: config.py  database.py
app/models/: __init__.py  cart.py  category.py  order.py  product.py  user.py
app/routers/: auth_api.py  cart_api.py  category_api.py  order_api.py  product_api.py  user_api.py
app/services/: auth_service.py  cart_service.py  category_service.py  order_service.py  product_service.py  user_service.py
app/utils/: auth_utils.py
migrations/: env.py
migrations/versions/: 214721cc4345_added_new_category_and_product_tables.py  2e100ca128b5_added_new_order_and_order_item_tables.py  3b162805afc3_update_relationship_for_order_item_table.py  771031663db4_added_new_cart_and_cartitem_tables.py  95f8b435914c_update_one_one_relationship_for_cart_.py  da9b03cf2431_remove_index_for_primary_keys.py  dbb202dfd01e_added_new_user_table.py  fb9396dfad5a_update_date_type_for_cart_and_cart_item_.py
requirements/: dev.txt  prod.txt  test.txt
test/: conftest.py  test_user.py
